<resources>
    <string name="app_name">Oride Delivery</string>
    <string name="txt_welcome">Welcome To</string>
    <string name="login_in">Log In</string>
    <string name="register_here_msg">Didn\'t register yet? <b><font color='#448AFF'>Register Here</font></b></string>
    <string name="start_earning_with_us">Start earning with us!</string>
    <string name="earn_more_talk_less"><font color='#2E4FFE'>EARN MORE,</font>\n<font color='#65DC41'>TALK LESS.</font></string>
    <string name="enter_your_valid_credentials_to_log_in">Enter your valid credentials to log in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password_">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="biometric">Biometric</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="biometric_auth_msg">Place your finger on the device in order to scan it</string>
    <string name="facial_recognition_auth_msg">Tap to turn on your camera and confirm facial recognition</string>
    <string name="lets_earn_">Let\'s Earn</string>
    <string name="read_privacy_policy">I\'ve read <font color='#448AFF'>Privacy Policy</font> and <font color='#448AFF'>Terms of Service</font></string>
    <string name="biometric_suggestion">Move your finger to make it accurate</string>
    <string name="facial_recognition">Facial Recognition</string>
    <string name="lets_ride">Let\'s Ride</string>
    <string name="title_map">Map</string>
    <string name="title_order">Order</string>
    <string name="title_earnings">Earnings</string>
    <string name="title_settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="shift">Shift</string>
    <string name="your_earnings">Your Earnings</string>
    <string name="notification">Notification</string>
    <string name="current_orders">Current Orders</string>
    <string name="picked_up">Picked Up</string>
    <string name="details">Details</string>
    <string name="current">Current</string>
    <string name="today">Today</string>
    <string name="past">Past</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number:</string>
    <string name="order_time">Order Time:</string>
    <string name="order_request">Order Request:</string>
    <string name="order_items">Order Items:</string>
    <string name="track_order">Track Order:</string>
    <string name="e_mail_us">E-mail us</string>
    <string name="call_our_customer_care">Call our customer care</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="store">Store</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="timeline">Timeline</string>
    <string name="order_info">Order Info</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total_price">Total Price</string>
    <string name="call_now">Call Now</string>
    <string name="complete">Complete</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="map_selection">Map Selection</string>
    <string name="clock_settings">Clock Settings</string>
    <string name="instant_call">Instant Call</string>
    <string name="instant_e_mail">Instant e-mail</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="write_your_opinion_here">Write your opinion here</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="message">Message</string>
    <string name="call_on">Call On</string>
    <string name="data_call">Data Call</string>
    <string name="running_shift">Running Shift</string>
    <string name="hour">Hour</string>
    <string name="upcoming_shift">Upcoming Shift</string>
    <string name="save">Save</string>
    <string name="offline_online">Offline/Online</string>
    <string name="status">Status</string>
    <string name="connect_support">Connect Support</string>
    <string name="connect_oride">Connect Oride</string>

</resources>